# task-app

./: README.md  package.json
src/: app.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: init.sql
src-tauri/src/: main.rs
src/components/: ConfirmDialog.vue  ErrorDialog.vue
src/components/subTask/: List.vue  RegistForm.vue
src/layouts/: default.vue
src/pages/: index.vue
src/pages/workspaces/: [workspaceId].vue
src/plugins/: subTask.ts
src/types/: error.d.ts  index.d.ts  subTask.d.ts  task.d.ts  taskDetail.d.ts  taskFile.d.ts  taskList.d.ts  workspace.d.ts
src/utils/: date.ts  deadline.ts  priority.ts  status.ts
